WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302305
Fix the ENABLE_MOMENTUM_EVENT_DISPATCHER_TEMPORARY_LOGGING build after
302823@main
https://bugs.webkit.org/show_bug.cgi?id=302305
Summary
Fix the ENABLE_MOMENTUM_EVENT_DISPATCHER_TEMPORARY_LOGGING build after 302823...
Abrar Rahman Protyasha
Reported
2025-11-10 18:13:25 PST
The WebWheelEvent::Phase enum is now scoped.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-10 18:13:30 PST
<
rdar://problem/164445802
>
Abrar Rahman Protyasha
Comment 2
2025-11-10 18:23:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53718
EWS
Comment 3
2025-11-10 21:50:09 PST
Committed
302829@main
(0df3d2738b50): <
https://commits.webkit.org/302829@main
> Reviewed commits have been landed. Closing PR #53718 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug