Fix the ENABLE_MOMENTUM_EVENT_DISPATCHER_TEMPORARY_LOGGING build after 302823@main https://bugs.webkit.org/show_bug.cgi?id=302305 rdar://164445802

Reviewed by Tim Horton.

Critically, WebWheelEvent::Phase is now a scoped enum.

Previously, for ease of logging, the wheel event phase and the momentum
phase were packed into a single integral value. We could still do this,
but I find reading the values separately easier, so we plumb both phase
values throughout the MomentumEventDispatcher logging code, finally
logging them next to each other.

No change in functionality, so no new tests.

* Source/WebKit/WebProcess/WebPage/MomentumEventDispatcher.cpp:
(WebKit::MomentumEventDispatcher::handleWheelEvent):
(WebKit::MomentumEventDispatcher::dispatchSyntheticMomentumEvent):
(WebKit::MomentumEventDispatcher::equalizeTailGaps):
(WebKit::MomentumEventDispatcher::pushLogEntry):
(WebKit::MomentumEventDispatcher::flushLog):
* Source/WebKit/WebProcess/WebPage/MomentumEventDispatcher.h:

Canonical link: https://commits.webkit.org/302829@main